# scorep_plugin_metric_papi_derived

./: .gitmodules  CMakeLists.txt  README.md  papi_derived.c  papi_derived.h
metrics/: ipc.c  metrics.h
